# scratch-tutor-memory

./: .env.example  .gitignore  AGENT_INTEGRATION.md  AGENT_SERVICE_INTEGRATION.md  INTEGRATION.md  LICENSE  README.md  chat_cli.py  demo.py  demo_agent.py  langgraph_demo.py  pyproject.toml
.milvus/: docker-compose.yml
memory_module/: __init__.py  api.py  concepts.py  embedding.py  extractor.py  kimi_client.py  milvus_store.py  mimo_client.py  schemas.py  service.py  store.py
memory_module/context/: __init__.py  api.py  compaction.py  schemas.py  service.py  store.py
scripts/: smoke_agent_memory.py  smoke_context.py  smoke_milvus_store.py  smoke_mimo.py
