[project]
name = "memory-module"
version = "0.1.0"
description = "Long-term memory module for a Scratch teaching agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "langgraph>=1.1.10",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
# Real semantic embedder. Optional because it pulls in torch + a model
# download (~100MB for bge-small-zh). The demo defaults to HashEmbedder
# and runs fine without this extra.
st = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_module"]
